{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 38,
  "lineage": "2a5a3f1c-9273-1240-43ea-db8234fb8452",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7f98860372837c5",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-0b7f98860372837c5",
            "domain": "vpc",
            "id": "eipalloc-0b7f98860372837c5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-152-213-1.compute-1.amazonaws.com",
            "public_ip": "54.152.213.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f082aa8f40f7c704",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-0f082aa8f40f7c704",
            "association_id": "eipassoc-0d008b3da081ccf22",
            "domain": "vpc",
            "id": "eipalloc-0f082aa8f40f7c704",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c73caa09980746f1",
            "private_dns": "ip-192-168-83-137.ec2.internal",
            "private_ip": "192.168.83.137",
            "public_dns": "ec2-44-216-138-2.compute-1.amazonaws.com",
            "public_ip": "44.216.138.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:internet-gateway/igw-078f681e5d0d8c446",
            "id": "igw-078f681e5d0d8c446",
            "owner_id": "804295906245",
            "tags": {
              "Name": "igw_arc_poc"
            },
            "tags_all": {
              "Name": "igw_arc_poc"
            },
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "dependencies": [
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7f98860372837c5",
            "association_id": "eipassoc-0e6e431e6030cafbf",
            "connectivity_type": "public",
            "id": "nat-041bc5bd4ea80ab38",
            "network_interface_id": "eni-01ef8f9b4799737b3",
            "private_ip": "192.168.46.90",
            "public_ip": "54.152.213.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a0edc5d27b9052c",
            "tags": {
              "AutoTag_CreateTime": "2024-07-14T12:03:35Z",
              "AutoTag_Creator": "arn:aws:sts::804295906245:assumed-role/AWSReservedSSO_AdministratorAccess_80ec280fc192dd15/himanshu.yadav@sourcefuse.com",
              "Name": "poc_natgw-1"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2024-07-14T12:03:35Z",
              "AutoTag_Creator": "arn:aws:sts::804295906245:assumed-role/AWSReservedSSO_AdministratorAccess_80ec280fc192dd15/himanshu.yadav@sourcefuse.com",
              "Name": "poc_natgw-1"
            }
          },
          "dependencies": [
            "aws_eip.eip_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f082aa8f40f7c704",
            "association_id": "eipassoc-0d008b3da081ccf22",
            "connectivity_type": "public",
            "id": "nat-086455ed29f269b60",
            "network_interface_id": "eni-0c73caa09980746f1",
            "private_ip": "192.168.83.137",
            "public_ip": "44.216.138.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fda5a083e54d2863",
            "tags": {
              "Name": "poc_natgw-2"
            },
            "tags_all": {
              "Name": "poc_natgw-2"
            }
          },
          "dependencies": [
            "aws_eip.eip_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:network-acl/acl-0ad2bba6232316854",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad2bba6232316854",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "804295906245",
            "subnet_ids": [
              "subnet-00aa0868aa6b5a788",
              "subnet-040075c1172406c44",
              "subnet-05a0edc5d27b9052c",
              "subnet-0fda5a083e54d2863"
            ],
            "tags": {
              "Name": "nacl_arc_poc",
              "created": "saurav"
            },
            "tags_all": {
              "Name": "nacl_arc_poc",
              "created": "saurav"
            },
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_nacl_association_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-05de215d97c97b4ab",
            "network_acl_id": "acl-0ad2bba6232316854",
            "subnet_id": "subnet-040075c1172406c44"
          },
          "dependencies": [
            "aws_network_acl.nacl_arc_poc",
            "aws_subnet.private_subnets_arc_poc",
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-084927928e9bf1c1f",
            "network_acl_id": "acl-0ad2bba6232316854",
            "subnet_id": "subnet-00aa0868aa6b5a788"
          },
          "dependencies": [
            "aws_network_acl.nacl_arc_poc",
            "aws_subnet.private_subnets_arc_poc",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_nacl_association_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a4f76269514e717c",
            "network_acl_id": "acl-0ad2bba6232316854",
            "subnet_id": "subnet-05a0edc5d27b9052c"
          },
          "dependencies": [
            "aws_network_acl.nacl_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08a391657efb7cc8b",
            "network_acl_id": "acl-0ad2bba6232316854",
            "subnet_id": "subnet-0fda5a083e54d2863"
          },
          "dependencies": [
            "aws_network_acl.nacl_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "poc_private_rtbs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0a28d173bcf974a9e",
            "id": "rtb-0a28d173bcf974a9e",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-041bc5bd4ea80ab38",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb_arc_poc_1"
            },
            "tags_all": {
              "Name": "private_rtb_arc_poc_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_arc_poc",
            "aws_nat_gateway.natgw_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-001d15846c5510207",
            "id": "rtb-001d15846c5510207",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-086455ed29f269b60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb_arc_poc_2"
            },
            "tags_all": {
              "Name": "private_rtb_arc_poc_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_arc_poc",
            "aws_nat_gateway.natgw_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-04ad146e9ced555f6",
            "id": "rtb-04ad146e9ced555f6",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078f681e5d0d8c446",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rtb_arc_poc"
            },
            "tags_all": {
              "Name": "public_rtb_arc_poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_arc_poc",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_association_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033db91532896189b",
            "route_table_id": "rtb-0a28d173bcf974a9e",
            "subnet_id": "subnet-040075c1172406c44"
          },
          "dependencies": [
            "aws_eip.eip_arc_poc",
            "aws_nat_gateway.natgw_arc_poc",
            "aws_route_table.poc_private_rtbs",
            "aws_subnet.poc_public_subnets",
            "aws_subnet.private_subnets_arc_poc",
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6c5d150db5d3ef",
            "route_table_id": "rtb-001d15846c5510207",
            "subnet_id": "subnet-00aa0868aa6b5a788"
          },
          "dependencies": [
            "aws_eip.eip_arc_poc",
            "aws_nat_gateway.natgw_arc_poc",
            "aws_route_table.poc_private_rtbs",
            "aws_subnet.poc_public_subnets",
            "aws_subnet.private_subnets_arc_poc",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_association_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07375f2fe44b53ea8",
            "route_table_id": "rtb-04ad146e9ced555f6",
            "subnet_id": "subnet-05a0edc5d27b9052c"
          },
          "dependencies": [
            "aws_internet_gateway.igw_arc_poc",
            "aws_route_table.public_rtb_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcfee050e70cc44f",
            "route_table_id": "rtb-04ad146e9ced555f6",
            "subnet_id": "subnet-0fda5a083e54d2863"
          },
          "dependencies": [
            "aws_internet_gateway.igw_arc_poc",
            "aws_route_table.public_rtb_arc_poc",
            "aws_subnet.poc_public_subnets",
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-05a0edc5d27b9052c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a0edc5d27b9052c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc_subnet_public1"
            },
            "tags_all": {
              "Name": "poc_subnet_public1"
            },
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "dependencies": [
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0fda5a083e54d2863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda5a083e54d2863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc_subnet_public2"
            },
            "tags_all": {
              "Name": "poc_subnet_public2"
            },
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "dependencies": [
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_arc_poc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-040075c1172406c44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040075c1172406c44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private_arc_poc_1"
            },
            "tags_all": {
              "Name": "subnet_private_arc_poc_1"
            },
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "dependencies": [
            "aws_vpc.vpc_saurav"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-00aa0868aa6b5a788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aa0868aa6b5a788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private_arc_poc_2"
            },
            "tags_all": {
              "Name": "subnet_private_arc_poc_2"
            },
            "vpc_id": "vpc-0b5493778682b4cd4"
          },
          "dependencies": [
            "aws_vpc.vpc_saurav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_saurav",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:vpc/vpc-0b5493778682b4cd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0792f24e1f1d40bb8",
            "default_route_table_id": "rtb-03a1da0a658227da7",
            "default_security_group_id": "sg-050987b2e22f391af",
            "dhcp_options_id": "dopt-a6babfdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5493778682b4cd4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a1da0a658227da7",
            "owner_id": "804295906245",
            "tags": {
              "Environment": "ARC-POC",
              "Name": "vpc-saurav"
            },
            "tags_all": {
              "Environment": "ARC-POC",
              "Name": "vpc-saurav"
            }
          }
        }
      ]
    }
  ]
}